--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.jpa.show-sql=true
 
 server.servlet.context-path=/api
 
-jwt.secretKey="356rfegr7gty857ny9867njy8bv5v64bv75nb86m79j4b36v75ng8"
+spring.profiles.active=${ENV:dev}
