--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.jpa.show-sql=true
 server.servlet.context-path=/api
 
 spring.profiles.active=prod
+
+spring.data.redis.host=redis-13086.crce179.ap-south-1-1.ec2.cloud.redislabs.com
+spring.data.redis.port=13086
+spring.data.redis.password=gLmWvvvxa9lxWAE4euHQK1KBw9ccggB6
