--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,9 +5,13 @@ spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
 spring.datasource.username=root
 spring.datasource.password=FMONrWMJzdCvJMwIxPOUhaDLMCIojhkn
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
 server.servlet.context-path=/api
 
 jwt.secretKey=${JWT_SECRETKEY}
+
+spring.data.redis.host=redis-13086.crce179.ap-south-1-1.ec2.cloud.redislabs.com
+spring.data.redis.port=13086
+spring.data.redis.password=gLmWvvvxa9lxWAE4euHQK1KBw9ccggB6
